# test-bazel

./: .gitignore  README.md  WORKSPACE  package.json
browserclient/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  angular.json  package.json  tsconfig.json
browserclient/e2e/: BUILD.bazel
browserclient/src/: BUILD.bazel
browserclient/src/app/: BUILD.bazel  app.module.ts
browserclient/src/app/hello-world/: BUILD.bazel
browserclient/src/app/home/: BUILD.bazel
browserclient/src/app/todos/: BUILD.bazel  todos.component.ts
browserclient/src/app/todos/reducers/: BUILD.bazel
browserclient/src/lib/shorten/: BUILD.bazel
browserclient/src/shared/material/: BUILD.bazel
browserclient/tools/: angular_ts_project.bzl  karma.bzl  typescript.bzl
