load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

exports_files(["favicon.ico"])

k8s_deploy(
    name = "deploy",
    images = {
        "gcr.io/internal-200822/src:nodejs_image": "//browserclient/src:image",
    },
    template = ":deployment.yaml",
)

# Just a dummy test so that we have a test target for //... on certain bazelci platforms with bazel_integration_test
sh_test(
    name = "dummy_test",
    srcs = ["dummy_test.sh"],
)

ts_config(
    name = "target-tsconfig",
    src = ":tsconfig.json",
)

ts_config(
    name = "target-tsconfig-test",
    src = ":tsconfig-test.json",
    deps = [":target-tsconfig"],
)
