load("//browserclient/tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_ts_project(
    name = "app",
    srcs = [
        "app.module.ts",
        "app.component.ts",
    ],
    angular_assets = ["app.component.html"],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
    ],
)
